new task logic, reversed ids in tables
